test/official_tests/constructor/extra_arguments.lox
class Foo {
  init(a, b) {
    this.a = a;
    this.b = b;
  }
}

var foo = Foo(1, 2, 3, 4); // error: {"line":8,"message":"Function 'Foo::Foo' expected 2 arguments but got 4","type":"RuntimeError"}